# shadoword

./: .dockerignore  .gitignore  AGENTS.md  BUILD.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  flake.nix  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build-test.yml  build.yml  ci.yml  docker.yml  nix-check.yml  pr-test-build.yml  release.yml
bench_corpus/: README.md  clip_10s_ref.txt  clip_15s_ref.txt  clip_20s_ref.txt  clip_30s_ref.txt
crates/shadoword-api/: Cargo.toml
crates/shadoword-api/src/: main.rs
crates/shadoword-core/: Cargo.toml
crates/shadoword-core/src/: audio.rs  config.rs  lib.rs  service.rs  wav.rs
crates/shadoword-core/tests/: model_auto_download.rs
crates/shadoword-daemon/: Cargo.toml
crates/shadoword-daemon/src/: main.rs
crates/shadoword-desktop/: Cargo.toml
crates/shadoword-desktop/src/: main.rs
crates/shadoword-egui/: Cargo.toml
crates/shadoword-egui/src/: hotkeys.rs  main.rs  output.rs  platform.rs  recording.rs  remote.rs  transcription.rs
crates/shadoword-egui/src/ui/: about.rs  constants.rs  general.rs  helpers.rs  history.rs  mod.rs  models.rs  settings.rs  sidebar.rs  status_bar.rs  theme.rs
crates/shadoword-model-whisper/: Cargo.toml
crates/shadoword-model-whisper/bench-results/: whisper-integration-report-cuda-base.md  whisper-integration-report-cuda-large-v3-turbo.md  whisper-integration-report-cuda-medium.md  whisper-integration-report-cuda-small.md  whisper-integration-report-cuda-tiny.md  whisper-integration-report-cuda.md  whisper-integration-report-vulkan-base.md  whisper-integration-report-vulkan-large-v3-turbo.md  whisper-integration-report-vulkan-medium.md  whisper-integration-report-vulkan-small.md  whisper-integration-report-vulkan-tiny.md  whisper-integration-report-vulkan.md  whisper-model-size-comparison-cuda.md  whisper-model-size-comparison-vulkan.md
crates/shadoword-model-whisper/src/: lib.rs
crates/shadoword-model-whisper/tests/: whisper_integration.rs
crates/shadoword-shared/: Cargo.toml
crates/shadoword-shared/src/: lib.rs
crates/shadowword-core/: Cargo.toml
crates/shadowword-core/src/: config.rs  lib.rs  service.rs
crates/shadowword-daemon/: Cargo.toml
crates/shadowword-daemon/src/: main.rs
crates/shadowword-desktop/: Cargo.toml
crates/shadowword-desktop/src/: main.rs
docker/: .gitignore  export-rootfs.sh
docker/config/: config.json.example
docs/: tauri-functionality-map.md
nix/: hm-module.nix  module.nix
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: actions.rs  cli.rs  lib.rs  llm_client.rs  main.rs  portable.rs  tray.rs
src-tauri/src/managers/: history.rs  transcription.rs
src/components/icons/: HandyTextLogo.tsx
src/components/settings/about/: AboutSettings.tsx
src/components/settings/debug/: DebugPaths.tsx
src/components/update-checker/: UpdateChecker.tsx
src/i18n/locales/ar/: translation.json
src/i18n/locales/bg/: translation.json
src/i18n/locales/cs/: translation.json
src/i18n/locales/de/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/fr/: translation.json
src/i18n/locales/he/: translation.json
src/i18n/locales/it/: translation.json
src/i18n/locales/ja/: translation.json
src/i18n/locales/ko/: translation.json
src/i18n/locales/pl/: translation.json
src/i18n/locales/pt/: translation.json
src/i18n/locales/ru/: translation.json
src/i18n/locales/sv/: translation.json
src/i18n/locales/tr/: translation.json
src/i18n/locales/uk/: translation.json
src/i18n/locales/vi/: translation.json
src/i18n/locales/zh/: translation.json
src/i18n/locales/zh-TW/: translation.json
