[workspace]
members = [
  "crates/shadowword-core",
  "crates/shadowword-daemon",
  "crates/shadowword-desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Fractal-Tess"]
repository = "https://github.com/Fractal-Tess/shadoword"

[workspace.dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
cpal = "0.16.0"
directories = "6.0.0"
eframe = "0.33.0"
egui = "0.33.0"
flate2 = "1"
tar = "0.4"
enigo = "0.6.1"
global-hotkey = "0.6"
handy-keys = "0.2.4"
hound = "3.5.1"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
rubato = "0.16.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
transcribe-rs = { version = "0.3.8", features = ["whisper-cpp", "onnx"] }
