[package]
name = "shadoword-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
whisper-vulkan = ["shadoword-core/whisper-vulkan"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
shadoword-core = { path = "../shadoword-core" }
shadoword-shared = { path = "../shadoword-shared" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
