[package]
name = "shadoword-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
whisper-vulkan = ["shadoword-model-whisper/whisper-vulkan", "transcribe-rs/whisper-vulkan"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
cpal.workspace = true
directories.workspace = true
hound.workspace = true
log.workspace = true
reqwest.workspace = true
rubato.workspace = true
serde.workspace = true
serde_json.workspace = true
shadoword-shared = { path = "../shadoword-shared" }
shadoword-model-whisper = { path = "../shadoword-model-whisper" }
tracing.workspace = true
transcribe-rs.workspace = true

[dev-dependencies]
ort = { version = "2.0.0-rc.12", features = ["preload-dylibs"] }
tracing-subscriber.workspace = true
