[package]
name = "shadowword-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
cuda = ["transcribe-rs/ort-cuda"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
cpal.workspace = true
directories.workspace = true
hound.workspace = true
log.workspace = true
rubato.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
transcribe-rs.workspace = true
