[package]
name = "shadowword-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
cuda = ["shadowword-core/cuda"]
whisper-vulkan = ["shadowword-core/whisper-vulkan"]
whisper-cuda = ["shadowword-core/whisper-cuda"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
shadowword-core = { path = "../shadowword-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
