[package]
name = "shadowword-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
cuda = ["shadowword-core/cuda"]

[dependencies]
anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
eframe.workspace = true
egui.workspace = true
enigo.workspace = true
reqwest.workspace = true
serde_json.workspace = true
shadowword-core = { path = "../shadowword-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
