[package]
name = "shadowword-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
cuda = ["shadowword-core/cuda"]

[dependencies]
anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wayland", "x11", "wgpu"] }
egui.workspace = true
enigo.workspace = true
reqwest.workspace = true
serde_json.workspace = true
shadowword-core = { path = "../shadowword-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu = { version = "27.0.1", default-features = false, features = ["std", "wgsl", "vulkan", "gles"] }
